# kernel_spreading_test

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: spreadkernel.cpp
